--- a/androidmodernarchetype/src/main/res/layout/activity_main.xml
+++ b/androidmodernarchetype/src/main/res/layout/activity_main.xml
@@ -17,4 +17,10 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world"/>
 
+    <Button
+        android:id="@+id/sample_nosql_action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hello_world"/>
+
 </LinearLayout>
