--- a/androidmodernarchetype/src/main/res/layout/activity_main.xml
+++ b/androidmodernarchetype/src/main/res/layout/activity_main.xml
@@ -23,4 +23,11 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world"/>
 
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/some_info"/>
+
+
 </LinearLayout>
